Update social media handle and follow links
Updated social media tags and follow links.

--- a/index.html
+++ b/index.html
@@ -45,13 +45,18 @@
 
       <div class="row" aria-label="Social hashtag and handle">
         <span class="pill">Hashtag: <strong>#SmartLooperLive</strong></span>
-        <span class="pill">Tag: <strong>@YourHandle</strong></span>
+        <span class="pill">Tag: <strong>@osageev</strong></span>
       </div>
 
-      <p class="note">Only upload content you created and have permission to share. If your video shows someone else, please make sure they’re okay with it first.</p>
+      <div class="row" aria-label="Follow links">
+        <a class="btn small secondary" href="https://instagram.com/osageev" target="_blank" rel="noopener">Follow us on Instagram</a>
+        <a class="btn small secondary" href="https://twitter.com/osageev" target="_blank" rel="noopener">Follow us on Twitter</a>
+      </div>
+
+<!--      <p class="note">Only upload content you created and have permission to share. If your video shows someone else, please make sure they’re okay with it first.</p> -->
 
       <div class="foot">
-        <div>Questions? Chat with us at the booth or email <a href="mailto:you@example.com">you@example.com</a>.</div>
+        <!-- <div>Questions? Chat with us here or email <a href="mailto:osageev@gmail.com">osageev@gmail.com</a>.</div> -->
         <div class="attribution">Tip: Save this page as a QR code on your signage so folks can find everything fast.</div>
       </div>
     </section>
