Update feedback link text for clarity

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <div class="btns">
         <!-- 1) Contact + Feedback form -->
-        <a class="btn primary" id="contactFeedback" href="https://forms.gle/q7hZzuEkbpjzFkWP9" target="_blank" rel="noopener">Share contact info & quick feedback</a>
+        <a class="btn primary" id="contactFeedback" href="https://forms.gle/q7hZzuEkbpjzFkWP9" target="_blank" rel="noopener">Share contact info and/or quick feedback</a>
         <!-- 2) Video sharing (direct upload portal) -->
         <a class="btn secondary" id="videoUpload" href="https://www.dropbox.com/request/9kM7KdhUNokETcTmhL7W" target="_blank" rel="noopener">Share your event video (upload here)</a>
       </div>
