--- a/index.html
+++ b/index.html
@@ -48,22 +48,17 @@
         <span class="pill">Tag: <strong>@osageev</strong></span>
       </div>
 
+
       <div class="row" aria-label="Follow links">
-        <a class="btn small secondary" href="https://instagram.com/osageev" target="_blank" rel="noopener">Follow us on Instagram</a>
-        <a class="btn small secondary" href="https://twitter.com/osageev" target="_blank" rel="noopener">Follow us on Twitter</a>
+        <a class="btn small secondary" href="https://instagram.com/osageev" target="_blank" rel="noopener">
+        <img class="icon" src="https://cdn.simpleicons.org/instagram" alt="" width="18" height="18" loading="lazy"/>
+        Follow us (Insta)
+        </a>
+        <a class="btn small secondary" href="https://twitter.com/osageev" target="_blank" rel="noopener">
+        <img class="icon" src="https://cdn.simpleicons.org/x/fff" alt="" width="18" height="18" loading="lazy"/>
+        Follow us on (X)
+        </a> 
       </div>
-
-
-      <div class="row" aria-label="Follow links">
-<a class="btn small secondary" href="https://instagram.com/osageev" target="_blank" rel="noopener">
-<img class="icon" src="https://cdn.simpleicons.org/instagram" alt="" width="18" height="18" loading="lazy"/>
-Follow us on Instagram
-</a>
-<a class="btn small secondary" href="https://twitter.com/osageev" target="_blank" rel="noopener">
-<img class="icon" src="https://cdn.simpleicons.org/x" alt="" width="18" height="18" loading="lazy"/>
-Follow us on Twitter
-</a>
-</div>
 
 <!--      <p class="note">Only upload content you created and have permission to share. If your video shows someone else, please make sure they’re okay with it first.</p> -->
 
