--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </a>
         <a class="btn small secondary" href="https://twitter.com/osageev" target="_blank" rel="noopener">
         <img class="icon" src="https://cdn.simpleicons.org/x/fff" alt="" width="18" height="18" loading="lazy"/>
-         Follow us on (X)
+         Follow us (X)
         </a> 
       </div>
 
