--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     .brand{font-weight:800;color:#fff}
     .note{font-size:13px;color:var(--muted);margin-top:14px}
     .attribution{margin-top:10px;font-size:12px;color:var(--muted)}
-    @media(min-width:560px){.btns{grid-template-columns:1fr 1fr}}
+   @media(min-width:560px){.btns{grid-template-columns:1fr 1fr}}
+    .btn .icon{width:18px;height:18px;margin-right:14px;display:inline-block;vertical-align:-3px}
   </style>
 </head>
 <body>
